--- a/airear/.settings/org.eclipse.wst.common.component
+++ b/airear/.settings/org.eclipse.wst.common.component
@@ -2,5 +2,26 @@
     <wb-module deploy-name="airear-0.0.1-SNAPSHOT">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/ear-resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/application" tag="defaultRootSource"/>
+        <dependent-module archiveName="view-0.0.1-SNAPSHOT.war" deploy-path="/" handle="module:/resource/airview/airview">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="business-0.0.1-SNAPSHOT.jar" deploy-path="/" handle="module:/resource/airbusiness/airbusiness">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="javaee-api-5.jar" deploy-path="/APP-INF" handle="module:/classpath/var/M2_REPO/javaee/javaee-api/5/javaee-api-5.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="slf4j-api-1.5.11.jar" deploy-path="/APP-INF" handle="module:/classpath/var/M2_REPO/org/slf4j/slf4j-api/1.5.11/slf4j-api-1.5.11.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jcl-over-slf4j-1.5.11.jar" deploy-path="/APP-INF" handle="module:/classpath/var/M2_REPO/org/slf4j/jcl-over-slf4j/1.5.11/jcl-over-slf4j-1.5.11.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="slf4j-log4j12-1.5.11.jar" deploy-path="/APP-INF" handle="module:/classpath/var/M2_REPO/org/slf4j/slf4j-log4j12/1.5.11/slf4j-log4j12-1.5.11.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="log4j-1.2.16.jar" deploy-path="/APP-INF" handle="module:/classpath/var/M2_REPO/log4j/log4j/1.2.16/log4j-1.2.16.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
     </wb-module>
 </project-modules>
