--- a/airview/.settings/org.eclipse.wst.common.component
+++ b/airview/.settings/org.eclipse.wst.common.component
@@ -5,6 +5,12 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resources"/>
         <wb-resource deploy-path="/" source-path="/src/main/webapp"/>
+        <dependent-module archiveName="business-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/airbusiness/airbusiness">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="model-0.0.1-SNAPSHOT.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/airmodel/airmodel">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="airview"/>
         <property name="java-output-path" value="/airview/target/classes"/>
     </wb-module>
